--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -5,3 +5,24 @@
     {{ manifest.name }}
   {% endif %}
 </title>
+
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="canonical" href="{{ page.url | absoluteUrl }}" />
+<meta name="author" content="{{ pkg.author.name }}" />
+<meta name="description" content="{{ tldr or manifest.description }}" />
+<meta name="generator" content="Eleventy {{ pkg.dependencies['@11ty/eleventy'] | replace('^', '') }}" />
+{% if pkg.private %}<meta name="robots" content="noindex, nofollow" />{% endif %}
+<link rel="icon" type="image/png" href="/img/favicon-32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="/img/favicon-16.png" sizes="16x16" />
+<link rel="icon" href="/favicon.ico" sizes="32x32" />
+<link rel="apple-touch-icon" href="/img/apple-touch-192.png">
+<link rel="alternate" type="application/atom+xml" title="{{ manifest.name }}" href="{{ '/feed.xml' | absoluteUrl }}" />
+<link rel="webmention" href="https://webmention.io/{{ pkg.homepage | hostname }}/webmention" />
+<link rel="pingback" href="https://webmention.io/{{ pkg.homepage | hostname }}/xmlrpc" />
+
+<link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/reseter.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reseter.css">
+
+<style>{% include 'styles/typography.css' %}</style>
+<style>{% include 'styles/_index.css' %}</style>
