--- a/src/_includes/preview.njk
+++ b/src/_includes/preview.njk
@@ -23,7 +23,7 @@
 
 <article>
   <h2>{{ post.title.rendered }}</h2>
-  <span>Zuletzt ge&auml;ndert am {{ post.modified }}</span>,
+  <span>Zuletzt ge&auml;ndert am {{ post.modified | dateStringFormatted }}</span>,
   {% if post.categories.length %}<span>kategorisiert unter: {{ categories | safe }}</span>{% endif %}<br />
   {% if post.tags.length %}<span>Markiert als: {{ tags | safe }}</span>{% endif %}
 
