feat: added additional structure

--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -24,5 +24,8 @@
 <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/reseter.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reseter.css">
 
-<style>{% include 'styles/typography.css' %}</style>
-<style>{% include 'styles/_index.css' %}</style>
+<style>
+  {% include 'styles/typography.css' %}
+  {% include 'styles/_index.css' %}
+  {% include 'styles/base.css' %}
+</style>
