--- a/src/_includes/styles/_index.css
+++ b/src/_includes/styles/_index.css
@@ -1,13 +1,22 @@
 :root {
   --color-bg: hsl(205, 87%, 94%);
   --color-text: hsl(40, 7%, 8%);
+  --color-text-muted: hsl(40, 3%, 29%);
   --color-bg-dark: hsl(40, 100%, 67%);
   --color-primary: hsl(168, 37%, 33%);
   --color-secondary: hsl(356, 100%, 53%);
+
+  --space-s: 0.25rem;
+  --space-m: 0.5rem;
+  --space-l: 1rem;
+  --space-xl: 1.5rem;
+  --space-xxl: 2rem;
 }
 
 body {
   margin: 0;
+  min-height: 100vh;
   background-color: var(--color-bg);
   color: var(--color-text);
+  box-sizing: border-box;
 }
