--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -2,7 +2,15 @@
 layout: base.njk
 ---
 
-<main>
-  <h1>{{ title }}</h1>
-  {{ content | safe }}
-</main>
+<style data-helmet>
+  {% include 'styles/default.css' %}
+</style>
+
+<div class="container">
+  {% include 'header.njk' %}
+
+  <main>
+    <h1>{{ title }}</h1>
+    {{ content | safe }}
+  </main>
+</div>
