--- a/src/_includes/styles/typography.css
+++ b/src/_includes/styles/typography.css
@@ -24,16 +24,41 @@
   --font-serif: 'Merriweather', Iowan Old Style, Apple Garamond, Baskerville,
     Times New Roman, Droid Serif, Times, Source Serif Pro, serif,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+
+  --font-base: 18px;
+  --font-size-h1: 1.802rem;
+  --font-size-h2: 1.602rem;
+  --font-size-h3: 1.424rem;
+  --font-size-h4: 1.266rem;
+  --font-size-h5: 1.125rem;
+  --font-size: 1rem;
+  --font-size-s: 0.889rem;
+
+  --lh-normal: 1.5;
+  --lh-condensed: 1.25;
+  --lh-narrow: 1;
+
+  --ls-normal: 0ch;
+  --ls-extended: 0.125ch;
+  --ls-wide: 0.5ch;
+}
+
+*,
+::after,
+::before {
+  line-height: var(--line-height, inherit);
+  letter-spacing: var(--letter-spacing, inherit);
 }
 
 html {
-  font-size: 100%;
+  font-size: var(--font-base);
 }
 
 body {
   font-family: var(--font-sans);
   font-weight: 400;
-  line-height: 1.75;
+  line-height: var(--line-height, var(--lh-normal));
+  letter-spacing: var(--letter-spacing, var(--ls-normal));
 }
 
 h1,
@@ -43,34 +68,34 @@ h4,
 h5 {
   margin: 3rem 0 1.38rem;
   font-family: var(--font-serif);
-  font-weight: 400;
+  font-weight: 700;
   line-height: 1.3;
 }
 
 h1 {
   margin-top: 0;
-  font-size: 2.488rem;
+  font-size: var(--font-size-h1);
 }
 
 h2 {
-  font-size: 2.074rem;
+  font-size: var(--font-size-h2);
 }
 
 h3 {
-  font-size: 1.728rem;
+  font-size: var(--font-size-h3);
 }
 
 h4 {
-  font-size: 1.44rem;
+  font-size: var(--font-size-h4);
 }
 
 h5 {
-  font-size: 1.2rem;
+  font-size: var(--font-size-h5);
 }
 
 small,
 .text_small {
-  font-size: 0.833rem;
+  font-size: var(--font-size-s);
 }
 
 strong {
@@ -79,31 +104,20 @@ strong {
 }
 
 p {
-  margin-bottom: 1rem;
+  margin-bottom: var(--space-l);
 }
 
-header,
-main,
-footer,
-p {
-  font-size: 18.8425px;
-  line-height: 26px;
+.muted {
+  color: var(--color-text-muted);
 }
 
-header::before,
-main::before,
-footer::before,
-p::before {
-  content: '';
-  margin-bottom: -0.3024em;
-  display: table;
-}
-
-header::after,
-main::after,
-footer::after,
-p::after {
-  content: '';
-  margin-top: -0.3344em;
-  display: table;
+@media screen and (min-width: 768px) {
+  :root {
+    --font-size-h1: 2.488rem;
+    --font-size-h2: 2.074rem;
+    --font-size-h3: 1.728rem;
+    --font-size-h4: 1.44rem;
+    --font-size-h5: 1.2rem;
+    --font-size-s: 0.833rem;
+  }
 }
