--- a/src/blog/index.njk
+++ b/src/blog/index.njk
@@ -11,11 +11,7 @@ title: Posts
 {% if pagination.items.length %}
 
   {% for post in pagination.items %}
-    <article>
-      <h2>{{ post.title.rendered }}</h2>
-
-      {{ post.content.rendered | safe }}
-    </article>
+    {% include 'preview.njk' %}
   {% endfor %}
 
 {% else %}
