--- a/src/_includes/styles/_index.css
+++ b/src/_includes/styles/_index.css
@@ -16,6 +16,7 @@
 body {
   margin: 0;
   min-height: 100vh;
+  height: 100vh;
   background-color: var(--color-bg);
   color: var(--color-text);
   box-sizing: border-box;
