--- a/src/_includes/styles/default.css
+++ b/src/_includes/styles/default.css
@@ -1,19 +1,31 @@
+body {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-m);
+  min-height: 100vh;
+}
+
 main {
   flex: 1 0 66.667%;
   overflow-y: auto;
+  max-height: 100%;
 }
 
-.container {
+#content {
+  flex: 1 0 auto;
   display: flex;
   align-items: flex-start;
-  flex-direction: column;
+  flex-direction: column-reverse;
   gap: var(--space-l);
-  height: 100%;
 }
 
 @media screen and (min-width: 768px) {
-  .container {
-    flex-direction: row;
+  #content {
+    flex-direction: row-reverse;
     gap: var(--space-xxl);
+  }
+
+  #content .author {
+    align-self: flex-end;
   }
 }
