--- a/src/_includes/styles/header.css
+++ b/src/_includes/styles/header.css
@@ -1,6 +1,7 @@
 @media screen and (min-width: 768px) {
   header {
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
   }
 
   nav ul {
