--- a/src/_collections/category/index.njk
+++ b/src/_collections/category/index.njk
@@ -1,7 +1,7 @@
 ---js
 {
   pagination: {
-    alias: 'category',
+    alias: 'item',
     data: 'categories',
     size: 1,
     before(data) {
@@ -11,15 +11,4 @@
 }
 ---
 
-{% if category.description %}
-<p>{{ category.description}}</p>
-{% endif %}
-
-<section>
-<h2>Posts categorized under <strong>{{ category.name }}</strong>:</h2>
-
-{% for post in categoryPosts %}
-{% include 'preview.njk' %}
-{% endfor %}
-
-</section>
+{% include 'pagination_single.njk' %}
