--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,3 +1,9 @@
-<footer>
-  <p>I am a footer</p>
+<style data-helmet>
+  {% include 'styles/footer.css' %}
+</style>
+
+<footer class="full-bleed">
+  <div class="container">
+    <span>I am a footer</span>
+  </div>
 </footer>
