--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -8,7 +8,7 @@ layout: base.njk
 
 {% include 'header.njk' %}
 
-<div id="content">
+<div id="content" class="container">
   <main>
     <h1>{{ title }}</h1>
     {{ content | safe }}
