--- a/src/_includes/styles/header.css
+++ b/src/_includes/styles/header.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 768px) {
-  header {
+  header .container {
     display: flex;
     justify-content: space-between;
   }
