--- a/src/feed.json.njk
+++ b/src/feed.json.njk
@@ -5,19 +5,19 @@ permalink: feed.json
 
 {
   "version": "https://jsonfeed.org/version/1.1",
-  "title": "{{ package.name }}",
-  "language": "{{ package.language }}",
-  "home_page_url": "{{ package.homepage }}",
-  "feed_url": "{{ permalink | url | absoluteUrl(package.homepage) }}",
-  "description": "{{ package.description }}",
+  "title": "{{ manifest.name }}",
+  "language": "{{ pkg.language }}",
+  "home_page_url": "{{ pkg.homepage }}",
+  "feed_url": "{{ permalink | url | absoluteUrl(pkg.homepage) }}",
+  "description": "{{ pkg.description }}",
   "author": {
-    "name": "{{ package.author.name }}",
-    "url": "{{ package.author.url }}"
+    "name": "{{ pkg.author.name }}",
+    "url": "{{ pkg.author.url }}"
   },
   "items": [
     {% if posts %}
       {%- for post in posts | reverse %}
-        {%- set absolutePostUrl = post.link | url | absoluteUrl(package.homepage) %}
+        {%- set absolutePostUrl = post.link | url | absoluteUrl(pkg.homepage) %}
         {
           "id": "{{ absolutePostUrl }}",
           "url": "{{ absolutePostUrl }}",
