--- a/src/_includes/styles/preview.css
+++ b/src/_includes/styles/preview.css
@@ -2,12 +2,20 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: var(--space-m);
+  gap: var(--space-l);
+  border: var(--border-width) solid var(--color-bg-muted);
+  border-radius: var(--border-radius-m);
+  margin: inherit;
   overflow: hidden;
 }
 
 .preview h2 {
-  margin-top: var(--space-m);
+  margin-top: 0;
+  margin-bottom: var(--space-s);
+}
+
+.preview h2 a {
+  position: initial;
 }
 
 .preview h2 a::after {
@@ -29,69 +37,38 @@
 }
 
 .preview a:not([data-cover]) {
-  position: relative;
   z-index: 1;
-}
-
-.preview img {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: blur(3px) brightness(1.25) opacity(0.333);
-  z-index: -2;
-}
-
-.preview picture::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(
-    to bottom,
-    transparent 0%,
-    var(--color-bg) 66.667%
-  );
-  z-index: -1;
 }
 
 .preview .categories {
   align-self: flex-end;
 }
 
-.preview .tags a::before {
-  content: '#';
-  user-select: none;
+.preview .categories a,
+.preview .tags a {
+  text-decoration: none;
 }
 
 .preview .date {
   line-height: var(--lh-condensed);
 }
 
+.preview .read-more {
+  align-self: flex-end;
+}
+
+.preview .read-more::after {
+  content: ' \2192';
+  user-select: none;
+}
+
 @media screen and (min-width: 768px) {
   .preview {
     transition: background-color var(--duration) ease-in;
-    border-radius: var(--border-radius-m);
-    padding: var(--space-l);
   }
 
   .preview:hover,
   .preview:focus-within {
     background-color: var(--color-bg-muted);
-  }
-
-  .meta {
-    flex-direction: row;
-    justify-content: space-between;
-    gap: var(--space-l);
-    font-size: var(--font-size);
   }
 }
