--- a/src/_collections/category/index.njk
+++ b/src/_collections/category/index.njk
@@ -1,14 +1,8 @@
----js
-{
-  pagination: {
-    alias: 'item',
-    data: 'categories',
-    size: 1,
-    before(data) {
-      return data.filter(({ count }) => !!count)
-    }
-  }
-}
+---
+pagination:
+  alias: item
+  data: collections.categories
+  size: 1
 ---
 
 {% include 'pagination_single.njk' %}
