--- a/src/_includes/pagination_single.njk
+++ b/src/_includes/pagination_single.njk
@@ -25,7 +25,7 @@
         {% set current = post.date | parseDate | dateObj %}
 
         {% if previous.month != current.month or previous.year != current.year %}
-          <time class="separator" datetime="{{ current.year }}-{{ current.month | padStart(2, '0') }}" role="separator">{{ post.date | dateStringFormatted("MMMM YYYY") }}</time>
+          <time class="separator" datetime="{{ post.date | dateStringFormatted('YYYY-MM') }}" role="separator">{{ post.date | dateStringFormatted("MMMM YYYY") }}</time>
         {% endif %}
       {% endif %}
 
