--- a/src/feed.atom.njk
+++ b/src/feed.atom.njk
@@ -15,8 +15,8 @@ permalink: feed.xml
     <name>{{ package.author.name }}</name>
     <email>{{ package.author.email }}</email>
   </author>
-  {% if posts %}
-    {%- for post in posts | reverse %}
+  {% if collections.posts.length %}
+    {%- for post in collections.posts | reverse %}
       {%- set absolutePostUrl = post.link | url | absoluteUrl(package.homepage) %}
       <entry>
         <title>{{ post.title.rendered }}</title>
