fix: added reverse to pagination

--- a/src/_collections/blog/index.njk
+++ b/src/_collections/blog/index.njk
@@ -3,6 +3,7 @@ pagination:
   data: collections.posts
   size: 10
   generatePageOnEmptyData: true
+  reverse: true
 ---
 
 {% if pagination.items.length %}
