--- a/src/_collections/tags/index.njk
+++ b/src/_collections/tags/index.njk
@@ -3,6 +3,7 @@ pagination:
   data: collections.tags
   size: 100
   generatePageOnEmptyData: true
+  reverse: true
 ---
 
 <style data-helmet="tags">
