--- a/src/_collections/categories/index.njk
+++ b/src/_collections/categories/index.njk
@@ -3,6 +3,7 @@ pagination:
   data: collections.categories
   size: 10
   generatePageOnEmptyData: true
+  reverse: true
 ---
 
 <style data-helmet="articles">
