--- a/src/_includes/styles/typography.css
+++ b/src/_includes/styles/typography.css
@@ -34,6 +34,7 @@
   --font-size: 1rem;
   --font-size-s: 0.889rem;
 
+  --lh-extended: 1.75;
   --lh-normal: 1.5;
   --lh-condensed: 1.25;
   --lh-narrow: 1;
